--- a/eventRadar_Scraper.csproj
+++ b/eventRadar_Scraper.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="ProxySharp" Version="1.0.0" />
     <PackageReference Include="ProxySharp.Tcp" Version="1.0.1" />
     <PackageReference Include="ScrapySharp" Version="3.0.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.9.0" />
   </ItemGroup>
 
 </Project>
